Changelog
*********

1.6 - unreleased
================

* Output file mode is now assumed to be octal, like chmod.
  [elro]

1.5 - 2010-02-23
================

* Add support for explicitly setting the output file mode.
  [witsch]

* Add support for inline templates.
  [witsch]


1.4 - 2009-07-29
================

* Fixed the way variables in templates are substituted to allow buildout to
  determine dependencies on other parts and prepare those correctly. [tlotze]


1.3 - 2009-04-28
================

* Add support for output path creation. You can do::

    output = /path/to/target

  and intermediate path items will be created if they do not exist.
  [ulif]

* Add tests.
  [ulif]


1.2 - 2008-12-09
================

(By accident the 1.1 release was marked as 1.2. So in fact they are
the same.)

1.1 - 2008-12-09
================

* Correct handling of multiple variables in a line. Bugreport and patch from
  Roman Susi.
  [wichert]


1.0 - 2008-10-16
================

* Copy the mode of the input file to the output file. This makes it possible
  to create executable scripts.
  [wichert]

* Add missing link in README.
  [wichert]


1.0rc2 - 2008-07-04
===================

* Add a MANIFEST.in with instructions to include docs/, otherwise the package
  will not install.
  [wichert]


1.0rc1 - 2008-07-04
===================

* Initial release.
  [wichert]